# sharetrip

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  ansible.cfg  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 2d105ecba88a_initial_schema.py
ansible/inventory/: hosts.yml
ansible/playbooks/: deploy.yml
ansible/roles/common/defaults/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/nginx/defaults/: main.yml
ansible/roles/nginx/tasks/: main.yml
ansible/roles/nginx/templates/: nginx.conf.j2
ansible/roles/sharetrip/defaults/: main.yml
ansible/roles/sharetrip/handlers/: main.yml
ansible/roles/sharetrip/tasks/: main.yml
ansible/roles/sharetrip/templates/: env.j2
ansible/vars/: secrets.yml
docs/architecture/: adapter_pattern.md  decorator_db.md  layers.md  strategy_pattern.md
docs/db/: db.md
docs/sequence/: register_expense_sequence.md
docs/usecase/: usecase_global.md
src/sharetrip/: config.py  main.py
src/sharetrip/api/: dependencies.py
src/sharetrip/api/routers/: auth.py  expenses.py  settlements.py  trips.py
src/sharetrip/api/schemas/: auth.py  expenses.py  trips.py
src/sharetrip/domain/entities/: expense.py  membership.py  trip.py  user.py
src/sharetrip/domain/interfaces/: currency_port.py  (+3 more)
src/sharetrip/use_cases/: add_expense.py  compute_settlements.py  login_user.py  register_user.py
terraform/: .gitignore  main.tf  outputs.tf  providers.tf  terraform.tfvars.example
terraform/modules/sharetrip-stack/: main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/integration/: test_api.py  test_currency_adapter.py  test_real_db.py  test_sql_trip_repository.py
tests/unit/: test_add_expense_use_case.py  test_auth_use_cases.py  test_cached_currency_adapter.py  test_cached_trip_repository.py  test_compute_settlements_use_case.py  test_config.py  test_expense_observer.py  test_split_strategies.py
tests/unit/api/: test_routers.py
tests/unit/domain/: test_split_strategies.py
tests/unit/infrastructure/: test_currency_adapter.py
tests/unit/use_cases/: test_add_expense_use_case.py  test_auth_use_cases.py  test_compute_settlements_use_case.py
(+12 files in other folders)
